--- a/2_1_typography.html
+++ b/2_1_typography.html
@@ -126,38 +126,46 @@
     <!-- START HERE -->
 
     <!-- HEADINGS -->
+    <h1>Heading One</h1>
+    <h2>Heading Two</h2>
+    <h3>Heading Three</h3>
+    <h4>Heading Four</h4>
+    <h5>Heading Five</h5>
+    <h6>Heading Six</h6>
 
     <!-- PARAGRAPH -->
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit alias non esse ea vel voluptatem expedita mollitia libero
+      ad quos.</p>
 
 
     <!-- BLOCKQUOTE -->
-
+    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, repudiandae.</blockquote>
 
     <!-- FLOW TEXT -->
-    <p>
+    <p class="flow-text">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ex non vero nemo minima corporisullam blanditiis consequuntur,
       est ab.</p>
 
     <!-- TEXT ALIGNMENT -->
     <div>
-      <h5>Left aligned text</h5>
+      <h5 class="left-align">Left aligned text</h5>
     </div>
     <div>
-      <h5>Right aligned text</h5>
+      <h5 class="right-align">Right aligned text</h5>
     </div>
     <div>
-      <h5>Center aligned text</h5>
+      <h5 class="center-align">Center aligned text</h5>
     </div>
 
     <!-- VERTICAL ALIGNMENT -->
-    <div>
+    <div style="height:400px;background:#f4f4f4" class="valign-wrapper">
       <h5>This should be vertically aligned</h5>
     </div>
 
     <!-- QUICK FLOATS -->
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, qui?</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, qui?</p>
-    <div></div>
+    <p class="left">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, qui?</p>
+    <p class="right">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium, qui?</p>
+    <div class="clearfix"></div>
     <!-- CLEAR FLOATS -->
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, nulla!</p>
     <!-- END HERE -->
@@ -166,12 +174,15 @@
   </div>
   <!-- ./ CONTAINER END -->
 
+  <!-- MOVES CONTENT UP -->
+  <div style="margin-top: 500px;"></div>
+
 
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
-  <script type="text/javascript" src="js/test.js"></script>
+
   <script>
     $(document).ready(function () {
       $('.dropdown-button').dropdown({
